[package]
name = "rustlog"
version = "1.1.0"
edition = "2021"
authors = ["Nicolas SIMON"]
description = "A logging library for Rust projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
package_infos = { git = "https://github.com/nicls67/package_infos.git", tag = "0.1.0" }

[dev-dependencies]
rusttests = { git = "https://github.com/nicls67/rusttests.git", tag = "1.1.0" }
serial_test = "3.3.1"
